# iscsi-fuse

./: Cargo.toml  README.md  config.yaml
.claude/skills/publish/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/iscsi-lib/: Cargo.toml
crates/iscsi-lib/src/: lib.rs
crates/iscsi-lib/src/block/: mod.rs
crates/iscsi-lib/src/iscsi/: command.rs  config.rs  digest.rs  login.rs  mod.rs  pipeline.rs  session.rs  transport.rs
crates/iscsi-lib/src/proto/: ring.rs
crates/iscsi-lib/tests/: write_persistence.rs
crates/iscsi-rs-cli/: Cargo.toml
crates/iscsi-rs-cli/src/: main.rs
crates/iscsid/: Cargo.toml
crates/iscsid/src/: main.rs
dext/: README.md  project.yml
dext/iscsi-rs-dext/: ISCSIBlockStorageDevice.cpp  ISCSIBlockStorageDevice.iig  ISCSIUserClient.cpp  ISCSIUserClient.iig  Info.plist  SharedMemory.h  iscsi-rs-dext.entitlements
dext/iscsi-rs-dext.xcodeproj/: project.pbxproj
docs/superpowers/plans/: 2026-03-21-iscsi-native-rewrite.md  2026-03-21-phase1-write-persistence-fix.md  2026-03-21-phase2-scaffold-iscsi-rs.md  2026-03-21-phase3-driverkit-dext.md
docs/superpowers/specs/: 2026-03-21-iscsi-native-rewrite-design.md  2026-03-21-iscsi-rs-driverkit-design.md  2026-03-22-apfs-formatting-investigation.md
share/: com.github.dickwu.iscsi-fuse.plist
src/: auto_format.rs  block_device.rs  cache.rs  config.rs  fuse_fs.rs  iscsi_backend.rs  lib.rs  main.rs
src/iscsi/: command.rs  config.rs  login.rs  mod.rs  pdu.rs  pipeline.rs  recovery.rs  session.rs  transport.rs
tests/: write_persistence.rs
