[package]
name = "iscsi-fuse"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
iscsi-client-rs = { git = "https://github.com/Masorubka1/iscsi-client-rs", branch = "main" }
fuser = "0.17"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
lru = "0.12"
libc = "0.2"
ctrlc = "3"
dirs = "5"
