[package]
name = "iscsi-fuse"
version = "0.4.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
fuser = "0.17"
num_cpus = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
crc32c = "0.6"
socket2 = "0.6"
moka = { version = "0.12", features = ["future"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2"
ctrlc = "3"
dirs = "6"
