[workspace]
resolver = "3"
members = [
    "crates/iscsi-lib",
    "crates/iscsid",
    "crates/iscsi-rs-cli",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
